--- a/R언어/기말준비.md
+++ b/R언어/기말준비.md
@@ -1,9 +1,8 @@
 반복문 작성
 
-결측치 확인 및 제거 : in연산자
-
-# 결측치 존재여부 확인(NA가 존재한다면 True)
+# 결측치 확인 및 제거 : in연산자
 ```
+# 결측치 존재여부 확인(NA가 존재한다면 True)
 is.na(df)
 --
 ex)
