--- a/R언어/기말준비.md
+++ b/R언어/기말준비.md
@@ -53,6 +53,7 @@ exam$math = ifelse(is.na(exam$math), 55, exam$math)
 
 
 # 이상치 확인 및 제거 : 사용되는 차트
+# + dplyr 패키지 사용법
 ```
 # gender에는 1,2만 존재해야 하는데 그 외에 값이 있을때 결측처리
 out = data.frame(gender = c(1,2,3,1,2,1), score = c(5,4,5,7,3,2))
@@ -88,9 +89,7 @@ mpg %>%
   dplyr::summarise(mean_h = mean(hwy))
 ```
 
-dplyr 패키지 사용법
-
-ggplot2(barplot)  활용 + 막대그래프
+# ggplot2(barplot)  활용 + 막대그래프
 ```
 kor = read.table("학생별국어성적_new.txt", header = T, sep = ',')
 kor
