--- a/R언어/기말준비.md
+++ b/R언어/기말준비.md
@@ -55,6 +55,20 @@ exam$math = ifelse(is.na(exam$math), 55, exam$math)
 # 이상치 확인 및 제거 : 사용되는 차트
 # + dplyr 패키지 사용법
 ```
+df <- data.frame(
+  팀 = c("A", "A", "B", "B"),
+  경기 = c(10, 12, 15, 13),
+  타수 = c(20, 22, 30, 28)
+)
+
+# across()는 여러 열에 같은 함수를 적용할 때 사용하는 도구
+# 경기와 타수에 mean(평균)을 적용
+df %>%
+  group_by(팀) %>%
+  summarise(across(c(경기, 타수), mean))
+```
+
+```
 # gender에는 1,2만 존재해야 하는데 그 외에 값이 있을때 결측처리
 out = data.frame(gender = c(1,2,3,1,2,1), score = c(5,4,5,7,3,2))
 out
