--- a/R언어/기말준비.md
+++ b/R언어/기말준비.md
@@ -119,6 +119,8 @@ ggplot(kor, aes(x = 이름, y = 점수))+geom_point()
 # fill = 'green': 막대 내부 색을 초록색으로 채움
 gg1 = ggplot(kor, aes(x = 이름, y = 점수))+ geom_bar(stat = 'identity', color = 'red', size = 5, fill = 'green')
 
+# axis.text.x는 **x축 글자(label)**를 꾸미는 거고,
+# element_text()는 글꼴, 색상, 위치 등을 지정하는 함수예요.
 # angle = 45: x축 글자를 45도 기울임 (글자 겹침 방지)
 # hjust, vjust: 글자의 수평·수직 위치 조정
 gg1 + theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1, colour = 'blue', size = 8))
