--- a/R언어/기말준비.md
+++ b/R언어/기말준비.md
@@ -195,6 +195,7 @@ g1 = ggplot(mt, aes(x = hp, y = mpg))
 ```
 
 ```
+
 # arrange(): 이름, 과목순 정렬
 # group = 이름: 이름별로 선을 그리기 위한 연결 그룹 설정
 # color = 이름: 이름별로 선과 점 색 다르게
@@ -207,4 +208,68 @@ ss = arrange(th, 이름, 과목)
 ggplot(ss, aes(x = 과목, y = 점수, group = 이름, color = 이름)) +
   geom_line() +
   geom_point(size = 6, shape = 19)
+```
+
+# 기능 세부 설명
+```
+is.na() # 테이블 이름 -> 테이블 전체의 내용을 결측치에따라 true/false값으로 치환해서 보여줌
+table(is.na()) # 테이블 이름 -> 테이블 내부에 NA 값이 몇개인지 개수를 보여줌
+
+filter() # 조건 -> 내부에 조건을 넣으면 해당 조건에 맞는 내용들만 반환
+
+테이블의 특정 값, 행/열을 NA로 변환하는 방법
+ex) exam[c(3,8,15), "math"] = NA
+
+ifelse() # 조건, 참일때, 거짓일때 -> 해당 조건에 맞으면 참일때 값을 반환, 아니라면 거짓일때 값 반환
+사용예시
+ex) exam$math = ifelse(is.na(exam$math) , 55, exam$math)
+
+summarise() # 새 컬럼 이름 = 요약할 계산식 -> 요약된 결과 표출
+사용예시
+ex) summarise(mean_math = mean(math, na.rm = T))
+ex) dplyr::summarise(across(c(경기, 타수), mean))
+ex) dplyr::summarise(mean_math = cumsum(math))
+
+arrange() # 정렬한 테이블의 컬럼명 -> 기본으로 오름차순으로 정렬
+사용예시
+ex) arrange(팀, desc(타수))
+
+mutate() # 새롭게 만들 컬럼명 = (변형해서 추가할 값)
+사용예시
+ex) mutate(팀별_평균 = mean(점수))
+
+mean() # 테이블의 특정 컬럼명 지정 ex) df$score -> 해당 컬럼에 평균을 반환
+※ na.rm = T -> na를 지워줌 mean() 내부에 넣어서 사용 가능
+사용예시
+ex) mean(math, na.rm = T)
+
+cumsum() # 테이블의 특정 컬럼 -> 해당 컬럼의 누적합계를 구해줌
+ex) label = cumsum(점수) - 0.5 * 점수
+
+across() # 특정 컬럼명 -> 여러 컬럼에 동일한 함수 적용 
+사용예시
+ex) across(c(경기, 타수), mean)
+
+
+ggplot() #시각화의 틀을 만드는 함수
+※ aes()를 통해 x, y, fill 등의 속성을 설정 가능
+사용예시
+ex) ggplot(skem3, aes(x = 이름, y = 점수, fill = 과목))
+
+geom_bar() # 실제 y값을 기준으로 막대그래프를 그림
+사용예시
+ex) geom_bar(stat = "identity")
+
+geom_text() # 막대 위에 텍스트(예: 점수 + "점") 표시
+사용예시
+ex) geom_text(aes(y = label, label = paste(점수, "점")))
+
+theme() # 그래프의 전반적인 스타일과 글자, 배경, 축 등 요소의 외형을 설정
+사용예시
+ex) theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1))
+
+guides()
+사용예시
+ex) guides(fill = guide_legend(reverse = T))
+
 ```
