--- a/aws/시험준비/예제 준비.md
+++ b/aws/시험준비/예제 준비.md
@@ -249,8 +249,78 @@ print(f"기존 파일 삭제 완료: {original_key}")
 
 ```
 
+# S3 파일에서 임의의 줄 몇 개만 출력하기 (CSV 또는 텍스트)
+```
+import boto3
+import random
+from io import StringIO
 
+s3 = boto3.client('s3')
 
+bucket_name = 'your-bucket-name'
+object_key = 'folder/myfile.csv'  # 또는 .txt 파일도 가능
+
+def lambda_handler(event=None, context=None):
+    # S3에서 파일 가져오기
+    response = s3.get_object(Bucket=bucket_name, Key=object_key)
+    file_content = response['Body'].read().decode('utf-8')
+    
+    # 줄 단위로 분리
+    lines = file_content.strip().split('\n')
+    
+    # 헤더 분리 (CSV 파일인 경우)
+    header = lines[0]
+    data_lines = lines[1:]
+    
+    # 랜덤하게 3줄 선택
+    sample = random.sample(data_lines, min(3, len(data_lines)))
+
+    # 결과 출력
+    print("✅ 랜덤 추출 결과:")
+    print(header)
+    for line in sample:
+        print(line)
+    
+    return {
+        'statusCode': 200,
+        'body': '\n'.join([header] + sample)
+    }
+
+```
+
+# S3 텍스트 파일에서 무작위 단어 몇 개 출력
+```
+import boto3
+import random
+
+s3 = boto3.client('s3')
+
+bucket_name = 'your-bucket-name'
+object_key = 'folder/sample.txt'  # .txt 파일 경로
+
+def lambda_handler(event=None, context=None):
+    # 1. S3에서 텍스트 파일 읽기
+    response = s3.get_object(Bucket=bucket_name, Key=object_key)
+    file_content = response['Body'].read().decode('utf-8')
+    
+    # 2. 전체 단어 목록 생성 (공백 기준)
+    words = file_content.split()
+    
+    # 3. 무작위 단어 추출 (최대 5개 또는 단어 수보다 적게)
+    num_words = min(5, len(words))
+    random_words = random.sample(words, num_words)
+
+    # 4. 출력
+    print("✅ 무작위 단어 추출 결과:")
+    for word in random_words:
+        print(word)
+
+    return {
+        'statusCode': 200,
+        'body': ' '.join(random_words)
+    }
+
+```
 
 
 
